--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -1,7 +1,7 @@
 {
   "name": "yuxi-lerna-playground",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "devDependencies": {
-    "@packages/ui": "*"
+    "@packages/ui": "^0.0.1"
   }
 }
